movieReviews/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-reviews-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-reviews-app
  template:
    metadata:
      labels:
        app: movie-reviews-app
    spec:
      containers:
        - name: movie-reviews-container
          image: benjlb/movie-reviews:v4
          ports:
            - containerPort: 8086
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
