movieReviews/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-reviews-service
spec:
  type: LoadBalancer
  ports:
    - port: 8086  # External port
      targetPort: 8086  # Port on the container
      protocol: TCP
  selector:
    app: movie-reviews-app
