movieReviews/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-reviews-ingress
spec:
  rules:
    - http:
        paths:
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: movie-reviews-service
                port:
                  number: 8086
