movieReviews/kubernetes/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: movie-reviews-egress
spec:
  podSelector:
    matchLabels:
      app: movie-reviews-app
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: "192.0.2.0/24"
